--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@fortawesome/react-fontawesome": "^0.2.3",
     "@tailwindcss/vite": "^4.1.11",
     "chart.js": "^4.5.0",
+    "i18next": "^25.3.4",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.6.1",
     "react-router-dom": "^7.7.1",
     "react-scroll": "^1.9.3",
     "tailwindcss": "^4.1.11",
