--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.3",
     "@tailwindcss/vite": "^4.1.11",
     "chart.js": "^4.5.0",
+    "framer-motion": "^12.23.12",
     "i18next": "^25.3.4",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
